--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <main>
-    <title>My Portfolio</title>
-    <h1>This is Ky.zar's</h1>
-    <p>This is my 1st ever guided portfolio. I hope you find it good. It's for FreeCodeCamp projects</p>
-    </main>
+   <title>My Portfolio</title>
+   <h1>This is Ky.zar's</h1>
+   <p>This is my 1st ever guided portfolio. I hope you find it good. It's for FreeCodeCamp projects</p>
+   <meta charset="utf-8" />
+   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
+    <main>
     <h2>Responsive Web Design projects</h2>
     <ol>
       <li><a href="/project1/index.html">CatPhotoApp</a></li>
     </ol>
+    </main>
   </body>
 </html>
