--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <h2>Responsive Web Design projects</h2>
     <ol>
       <li><a href="/project1/index.html">CatPhotoApp</a></li>
+      <li><a href="/project2/index.html">Cafe Menu</a></li>
     </ol>
     </main>
   </body>
