--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <main>
     <h2>Responsive Web Design projects</h2>
     <ol>
-      <li><a href="project1/index.html">CatPhotoApp</a></li>
-      <li><a href="project2/index.html">Cafe Menu</a></li>
+      <li><a href="freecodecamp-projects/project1/index.html">CatPhotoApp</a></li>
+      <li><a href="freecodecamp-projects/project2/index.html">Cafe Menu</a></li>
     </ol>
     </main>
   </body>
