--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
    <p>This is my 1st ever guided portfolio. I hope you find it good. It's for FreeCodeCamp projects</p>
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+   <base href="https://ky-zar.github.io/Freecodecamp-Projects/">
   </head>
   <body>
     <main>
     <h2>Responsive Web Design projects</h2>
     <ol>
-      <li><a href="Freecodecamp-Projects/project1/index.html">CatPhotoApp</a></li>
-      <li><a href="Freecodecamp-Projects/project2/index.html">Cafe Menu</a></li>
+      <li><a href="project1/index.html">CatPhotoApp</a></li>
+      <li><a href="project2/index.html">Cafe Menu</a></li>
     </ol>
     </main>
   </body>
