--- a/project1/index.html
+++ b/project1/index.html
@@ -6,6 +6,16 @@
     <title>CatPhotoApp</title>
   </head>
     <body>
+  <nav>
+      <div>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="contact/index.html">Contact Info</a></li>
+          <li><a href="about/index.html">About</a></li>
+          <li><a href="https://whatsapp.com/channel/0029Vb9CgGw8vd1XHzt4e53Y">Channel</a></li>
+          </ul>
+      </div>
+    </nav>
     <main>
       <h1>CatPhotoApp</h1>
       <section>
