--- a/project2/index.html
+++ b/project2/index.html
@@ -10,10 +10,10 @@
     <nav>
       <div>
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="contact/index.html">Contact Info</a></li>
-          <li><a href="about/index.html">About</a></li>
-          <li><a href="https://whatsapp.com/channel/0029Vb9CgGw8vd1XHzt4e53Y">Channel</a></li>
+          <li><a class="nav-link" href="index.html">Home</a></li>
+          <li><a class="nav-link" href="contact/index.html">Contact Info</a></li>
+          <li><a class="nav-link" href="about/index.html">About</a></li>
+          <li><a class="nav-link" href="https://whatsapp.com/channel/0029Vb9CgGw8vd1XHzt4e53Y">Channel</a></li>
           </ul>
       </div>
     </nav>
