--- a/project1/index.html
+++ b/project1/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CatPhotoApp</title>
     <link href="styles.css" rel="stylesheet"/>
+    <base href="https://ky-zar.github.io/Freecodecamp-Projects/">
   </head>
     <body>
   <nav>
