--- a/project3/index.html
+++ b/project3/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Colored Markers</title>
     <link rel="stylesheet" href="styles.css">
+    <base href="https://ky-zar.github.io/Freecodecamp-Projects/">
   </head>
   <body>
     <h1>CSS Color Markers</h1>
