--- a/index.html
+++ b/index.html
@@ -1,20 +1,63 @@
 <!DOCTYPE html>
 <html>
-  <head>
-   <title>My Portfolio</title>
-   <h1>This is Ky.zar's</h1>
-   <p>This is my 1st ever guided portfolio. I hope you find it good. It's for FreeCodeCamp projects</p>
-   <meta charset="utf-8" />
-   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-   <base href="https://ky-zar.github.io/Freecodecamp-Projects/">
-  </head>
-  <body>
-    <main>
-    <h2>Responsive Web Design projects</h2>
-    <ol>
-      <li><a href="project1/index.html">CatPhotoApp</a></li>
-      <li><a href="project2/index.html">Cafe Menu</a></li>
-    </ol>
-    </main>
-  </body>
+
+<head>
+  <link rel="stylesheet" href="styles.css">
+  <title>My Portfolio</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <base href="https://ky-zar.github.io/Freecodecamp-Projects/">
+</head>
+
+<body>
+  <header>
+    <h1 class="heading">This is Ky.zar's</h1>
+  </header>
+  <nav>
+    <div>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="contact/index.html">Contact Info</a></li>
+        <li><a href="about/index.html">About</a></li>
+        <li><a href="https://whatsapp.com/channel/0029Vb9CgGw8vd1XHzt4e53Y">Channel</a></li>
+        </ul>
+    </div>
+  </nav>
+  <main>
+    <div class="main-bar">
+      <p>This is my 1st ever guided portfolio. I hope you find it good. It's for FreeCodeCamp projects</p>
+    </div>
+    <div>
+      <aside>
+        Note: Most of these projects are guided and the one which are not have the "*" sign besides there names.
+      </aside>
+    </div>
+    <div class="one">
+      <h2>Responsive Web Design Projects</h2>
+      <section>
+        <div>
+          <h3>First Section</h3>
+          <ul>
+            <li><a href="project1/index.html">CatPhotoApp</a></li>
+            <li><a href="project2/index.html">Cafe Menu</a></li>
+            <li><a href="project3/index.html">Set of Colored Markers</a></li>
+            <li><a href="project4/index.html">Registration Form</a></li>
+            <li><a href="project5/index.html">*Survey Form</a></li>
+          </ul>
+        </div>
+      </section>
+      <section>
+        <div>
+          <h3>Second Section</h3>
+        </div>
+      </section>
+      <section>
+        <div class="section">
+          <h3>Third Section</h3>
+        </div>
+      </section>
+    </div>
+  </main>
+</body>
+
 </html>
