--- a/project1/index.html
+++ b/project1/index.html
@@ -11,7 +11,7 @@
   <nav>
       <div>
         <ul>
-          <<li><a class="nav-link" href="index.html">Home</a></li>
+          <li><a class="nav-link" href="index.html">Home</a></li>
           <li><a class="nav-link" href="contact/index.html">Contact Info</a></li>
           <li><a class="nav-link" href="about/index.html">About</a></li>
           <li><a class="nav-link" href="https://whatsapp.com/channel/0029Vb9CgGw8vd1XHzt4e53Y">Channel</a></li>
