--- a/project3/index.html
+++ b/project3/index.html
@@ -8,6 +8,16 @@
     <base href="https://ky-zar.github.io/Freecodecamp-Projects/">
   </head>
   <body>
+    <nav>
+      <div>
+        <ul>
+          <li><a class="nav-link" href="index.html">Home</a></li>
+          <li><a class="nav-link" href="contact/index.html">Contact Info</a></li>
+          <li><a class="nav-link" href="about/index.html">About</a></li>
+          <li><a class="nav-link" href="https://whatsapp.com/channel/0029Vb9CgGw8vd1XHzt4e53Y">Channel</a></li>
+          </ul>
+      </div>
+    </nav>
     <h1>CSS Color Markers</h1>
     <div class="container">
       <div class="marker red">
