--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
   <nav>
     <div>
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="contact/index.html">Contact Info</a></li>
-        <li><a href="about/index.html">About</a></li>
-        <li><a href="https://whatsapp.com/channel/0029Vb9CgGw8vd1XHzt4e53Y">Channel</a></li>
+        <li><a class="nav-link" href="index.html">Home</a></li>
+          <li><a class="nav-link" href="contact/index.html">Contact Info</a></li>
+          <li><a class="nav-link" href="about/index.html">About</a></li>
+          <li><a class="nav-link" href="https://whatsapp.com/channel/0029Vb9CgGw8vd1XHzt4e53Y">Channel</a></li>
         </ul>
     </div>
   </nav>
@@ -32,8 +32,10 @@
         Note: Most of these projects are guided and the one which are not have the "*" sign besides there names.
       </aside>
     </div>
-    <div class="one">
-      <h2>Responsive Web Design Projects</h2>
+    <header>
+        <h2>Responsive Web Design Projects</h2>
+    </header>
+    <article>
       <section>
         <div>
           <h3>First Section</h3>
@@ -52,11 +54,11 @@
         </div>
       </section>
       <section>
-        <div class="section">
+        <div>
           <h3>Third Section</h3>
         </div>
       </section>
-    </div>
+    </article>
   </main>
 </body>
 
