--- a/index.html
+++ b/index.html
@@ -3,15 +3,19 @@
 
 <head>
   <link rel="stylesheet" href="styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,800" rel="stylesheet">
   <title>My Portfolio</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <base href="https://ky-zar.github.io/Freecodecamp-Projects/">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Tiny5&display=swap" rel="stylesheet">
 </head>
 
 <body>
   <header>
-    <h1 class="heading">This is Ky.zar's</h1>
+    <h1 class="heading">This is <span class="pixel">Ky.zar</span></h1>
   </header>
   <nav>
     <div>
@@ -29,7 +33,7 @@
     </div>
     <div>
       <aside>
-        Note: Most of these projects are guided and the one which are not have the "*" sign besides there names.
+        Note: Most of these projects are guided and the ones which are not have <span class="pixel">pixelated names</span>.
       </aside>
     </div>
     <header>
@@ -44,13 +48,20 @@
             <li><a href="project2/index.html">Cafe Menu</a></li>
             <li><a href="project3/index.html">Set of Colored Markers</a></li>
             <li><a href="project4/index.html">Registration Form</a></li>
-            <li><a href="project5/index.html">*Survey Form</a></li>
+            <li><span class="pixel"><a href="project5/index.html">Survey Form</a></a></li>
           </ul>
         </div>
       </section>
       <section>
         <div>
           <h3>Second Section</h3>
+          <ul>
+            <li><a href="project6/index.html">Rothko Painting</a></li>
+            <li><a href="project7/index.html">Photo Gallery</a></li>
+            <li><a href="project8/index.html">Nutrition Label</a></li>
+            <li><a href="project9/index.html">Accessabilty Quiz</a></li>
+            <li><span class="pixel"><a href="project10/index.html">Tribute Page</a></li></li>
+          </ul>
         </div>
       </section>
       <section>
