--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
 </head>
 
 <body>
-  <header>
-    <h1 class="heading">This is <span class="pixel">Ky.zar</span></h1>
-  </header>
   <nav>
-    <div>
-      <ul>
-        <li><a class="nav-link" href="index.html">Home</a></li>
-          <li><a class="nav-link" href="contact/index.html">Contact Info</a></li>
-          <li><a class="nav-link" href="about/index.html">About</a></li>
-          <li><a class="nav-link" href="https://whatsapp.com/channel/0029Vb9CgGw8vd1XHzt4e53Y">Channel</a></li>
-        </ul>
-    </div>
+      <div>
+        <ul>
+          <li><a class="nav-link" href="index.html">Home</a></li>
+            <li><a class="nav-link" href="contact/index.html">Contact Info</a></li>
+            <li><a class="nav-link" href="about/index.html">About</a></li>
+            <li><a class="nav-link" href="https://whatsapp.com/channel/0029Vb9CgGw8vd1XHzt4e53Y">Channel</a></li>
+          </ul>
+      </div>
   </nav>
   <main>
+    <header>
+      <h1 class="heading">This is <span class="pixel">Ky.zar</span></h1>
+    </header>
     <div class="main-bar">
       <p>This is my 1st ever guided portfolio. I hope you find it good. It's for FreeCodeCamp projects</p>
     </div>
@@ -39,7 +39,7 @@
     <header>
         <h2>Responsive Web Design Projects</h2>
     </header>
-    <article>
+    <article class="rwd">
       <section>
         <div>
           <h3>First Section</h3>
@@ -48,7 +48,7 @@
             <li><a href="project2/index.html">Cafe Menu</a></li>
             <li><a href="project3/index.html">Set of Colored Markers</a></li>
             <li><a href="project4/index.html">Registration Form</a></li>
-            <li><span class="pixel"><a href="project5/index.html">Survey Form</a></a></li>
+            <li><span class="pixel"><a href="project5/index.html">Survey Form</a></li>
           </ul>
         </div>
       </section>
@@ -60,13 +60,19 @@
             <li><a href="project7/index.html">Photo Gallery</a></li>
             <li><a href="project8/index.html">Nutrition Label</a></li>
             <li><a href="project9/index.html">Accessabilty Quiz</a></li>
-            <li><span class="pixel"><a href="project10/index.html">Tribute Page</a></li></li>
+            <li><span class="pixel"><a href="project10/index.html">Tribute Page</a></li>
           </ul>
         </div>
       </section>
       <section>
         <div>
           <h3>Third Section</h3>
+          <ul>
+            <li><a href="project11/index.html">Balance Sheet</a></li>
+            <li><a href="project12/index.html">A Cat</a></li>
+            <li><a href="project13/index.html">A Piano</a></li>
+            <li><span class="pixel"><a href="project14/index.html">Documentaion</a></li>
+          </ul>
         </div>
       </section>
     </article>
