--- a/index.html
+++ b/index.html
@@ -75,6 +75,16 @@
           </ul>
         </div>
       </section>
+      <section>
+        <div>
+          <h3>Third Section</h3>
+          <ul>
+            <li><a href="project15/index.html">City Skyline</a></li>
+            <li><a href="project16/index.html">Magazine</a></li>
+            <li><span class="pixel"><a href="project17/index.html">Product Landing Page</a></li>
+          </ul>
+        </div>
+      </section>
     </article>
   </main>
 </body>
