--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       </section>
       <section>
         <div>
-          <h3>Third Section</h3>
+          <h3>Fourth Section</h3>
           <ul>
             <li><a href="project15/index.html">City Skyline</a></li>
             <li><a href="project16/index.html">Magazine</a></li>
